# lightroom-tagger

./: .dockerignore  .gitignore  .hermes-README.md  .hermes-execute.sh  .hermes-validate.sh  .hermes-workspace.yaml  AGENTS.md  CONTEXT-MAP.md  HERMES-QUICKSTART.md  Makefile  README.md  config.yaml  library.db.backup.pre-dedup  package-lock.json  package.json  pyproject.toml  sessions.json  subset_validation_report.html  test_direct_match.py  vision_subset_results.json
.claude/: settings.json
.claude/skills/: brainstorming  executing-plans  finishing-a-development-branch  receiving-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  writing-plans
.cursor/: .gitignore  hooks.json  worktrees.json
.cursor/hooks/: enforce-browser-harness.sh  job-handler-clear.sh  (+9 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.sandcastle/: .env.example  .gitignore  Dockerfile  ci-drift-gate.yml  main.mts  prompt.md  review.md
backend/: app.py  config.py  requirements.txt
core/: __init__.py  analyzer.py  cli.py  config.py  database.py  hasher.py  matcher.py  phash.py  test_analyzer.py  test_database.py  test_matcher.py
docs/: BATCH_API_TESTING_RESULTS.md  CATALOG_READ_WRITE.md  GITHUB-COPILOT-PROVIDER.md  STORAGE_MOUNT_REQUIREMENTS.md  architecture.md  comparison-pool-report.md
frontend/: index.html  vite.config.ts
instagram/: browser.py  crawler.py  scraper.py  test_browser.py  test_crawler.py
lightroom/: enricher.py  test_enricher.py  test_reader.py  test_writer.py  writer.py
lightroom_tagger/: CONTEXT.md  README.md  __main__.py  catalog_reader.py  cli.py  config.py  database.py  image_hasher.py  instagram_scraper.py  lr_writer.py  schema_explorer.py  tagger.py
scripts/: analyze_instagram_images.py  check_core_file_sizes.sh  dev-down.sh  dev-up.sh  generate_validation_report.py  merge_perspectives_6_to_4.py  restart-backend.sh  run_vision_matching.py  seed_yt_perspectives.py  sync_perspectives.py  test_subset_matching.py
tests/: test_database.py  test_dev_scripts.py  test_import_instagram_dump.py  test_job_runner.py  test_jobs_api.py  test_match_instagram_dump.py
(+1356 files in other folders)
